[package]
name = "ddsfile"
version = "0.3.0-unstable"
authors = ["Mike Dilger <mike@optcomp.nz>"]
description = "DirectDraw Surface file format parser/composer"
repository = "https://github.com/SiegeEngine/ddsfile"
documentation = "https://docs.rs/ddsfile"
license = "MIT"
keywords = [ "dds" ]
readme = "README.md"
edition = "2018"

[dependencies]
bitflags = "1.2"
byteorder = "1.3"
enum_primitive = "0.1"
