[package]
name = "ddsfile"
version = "0.5.2-unstable"
authors = ["Mike Dilger <mike@optcomp.nz>"]
description = "DirectDraw Surface file format parser/composer"
repository = "https://github.com/SiegeEngine/ddsfile"
documentation = "https://docs.rs/ddsfile"
license = "MIT"
keywords = [ "dds" ]
readme = "README.md"
edition = "2021"

[dependencies]
bitflags = "2.4"
byteorder = "1.5"
enum-primitive-derive = "0.2"
num-traits = "0.2"
